--- a/web/application/views/front/css/rancak.css
+++ b/web/application/views/front/css/rancak.css
@@ -94,7 +94,6 @@ background-size:100% 200%; background-image:linear-gradient(to bottom, rgba(0,0,
 #index-info > ul{display:inline-block;}
 #index-info > ul > li{float:left; margin:0 20px; width:calc(33% - 40px);}
 #index-info > ul > li > h5{font-weight:bold; font-size:24px; color:#E53935; margin:15px 0 10px;}
-#index-feature > ul > li > p{line-height:24px;}
 
 #index-works > ul > li{width:calc(50% - 20px); border:2px dashed #BDBDBD;}
 #index-works > ul > .without{float:left; margin-right:20px;}
@@ -107,17 +106,14 @@ background-size:100% 200%; background-image:linear-gradient(to bottom, rgba(0,0,
 #index-works > ul > .without > ul > li{background-image:url(../images/icon-without.png);}
 #index-works > ul > .with > ul > li{background-image:url(../images/icon-with.png);}
 
-.index-feature > ul{position:relative;}
-.index-feature > ul > li{top:0;}
-.index-feature > ul > li > h5{font-weight:bold; font-size:24px; margin-bottom:10px; color:#E53935;}
-.index-feature > ul > li > p{line-height:24px;}
-.index-feature > ul > .image{position:absolute; height:100%;}
-.index-feature > ul > .content{position:relative;}
-.index-feature > ul > .left{left:0;}
-.index-feature > ul > .right{right:0;}
-
-.index-feature .flex_thumb{width:100%; height:100%;}
-.index-feature .flex_thumb:hover{opacity:1;}
+#index-feature{min-height:200px;}
+#index-feature *{text-align:center;}
+#index-feature > ul{position:relative; float:left; margin:20px;}
+#index-feature > ul > li > h5{font-weight:bold; font-size:24px; margin:10px 0; color:#E53935;}
+#index-feature > ul > li > p{font-size:14px; line-height:18px; min-height:110px;}
+#index-feature > ul > .image{height:120px;}
+#index-feature > ul > .image > img{max-width:100%; max-height:120px;}
+#index-feature > ul > .content{position:relative;}
 
 #index-download *{text-align:center;}
 #index-download a{font-weight:bold; text-transform:uppercase; color:#424242; padding:20px; display:block; text-align:center;}
@@ -188,9 +184,7 @@ background-repeat:no-repeat; background-position:center;}
   /* index */
   #index-welcome, #index-welcome > .bg_cover{height:calc(100vh - 65px);}
   
-  .index-feature > ul > .image{width:200px;}
-  .index-feature > ul > .content.left{margin-right:220px;}
-  .index-feature > ul > .content.right{margin-left:220px;}
+  #index-feature > ul{width:calc(33% - 40px);}
   /* end index */
   
   
@@ -230,9 +224,7 @@ background-repeat:no-repeat; background-position:center;}
   #index-welcome, #index-welcome > .bg_cover{height:calc(100vh - 45px);}
   #index-welcome > .message > ul > li > *{background:#E53935; border:4px solid #E53935;}
   
-  .index-feature > ul > .image{width:100px;}
-  .index-feature > ul > .content.left{margin-right:120px;}
-  .index-feature > ul > .content.right{margin-left:120px;}
+  #index-feature > ul{width:calc(50% - 40px);}
   /* end index */
   
   .btt{display:none !important;}
@@ -246,7 +238,7 @@ background-repeat:no-repeat; background-position:center;}
   #index-info > ul > li{margin-left:0;}
   #index-download > ul > li{float:left; width:50%;}
   
-  .index-feature > ul > li{position:relative !important; margin-left:0 !important;}
+  #index-feature > ul{width:calc(100% - 40px);}
   /* end index */
 }
 
